tests/ui/parser/struct-default-values-and-missing-field-separator.stderr
error: expected `,`, or `}`, found `field2`
  --> $DIR/struct-default-values-and-missing-field-separator.rs:18:16
   |
LL |     field1: i32
   |                ^ help: try adding a comma: `,`

error: expected `,`, or `}`, found `field3`
  --> $DIR/struct-default-values-and-missing-field-separator.rs:19:14
   |
LL |     field2: E
   |              ^ help: try adding a comma: `,`

error: expected `:`, found `=`
  --> $DIR/struct-default-values-and-missing-field-separator.rs:27:12
   |
LL |     field1 = i32,
   |            ^
   |            |
   |            expected `:`
   |            help: field names and their types are separated with `:`

error: expected `:`, found `;`
  --> $DIR/struct-default-values-and-missing-field-separator.rs:28:11
   |
LL |     field2; E,
   |           ^
   |           |
   |           expected `:`
   |           help: field names and their types are separated with `:`

error: aborting due to 4 previous errors

